# wrt

./: .bazelignore  .bazelrc  .clippy.toml  .cursorignore  .editorconfig  .gitattributes  .gitignore  1  AGENT_MIGRATION_GUIDE.md  API_MISMATCH_FIXES.md  ARCHITECTURAL_ISSUES_20250619_051413.md  ARCHITECTURAL_ISSUES_20250620_121731.md  ARCHITECTURAL_ISSUES_20250620_132010.md  ARCHITECTURAL_ISSUES_20250620_134459.md  ARCHITECTURAL_ISSUES_20250622_061324.md  ARCHITECTURAL_MIGRATION_REPORT.md  ARCHITECTURE_REFACTOR.md  ASIL_COMPLIANCE_AUDIT.md  ASYNC_EXECUTOR_COMPLETION_PLAN.md  ATOMIC_MEMORY_MIGRATION.md  BUILD  BUILD_VERIFICATION_REPORT_20250619_051413.md  BUILD_VERIFICATION_REPORT_20250620_121731.md  BUILD_VERIFICATION_REPORT_20250620_132010.md  BUILD_VERIFICATION_REPORT_20250620_134459.md  BUILD_VERIFICATION_REPORT_20250622_061324.md  BUMP_ALLOCATOR_USAGE.md  CAPABILITY_BUILD_STATUS.md  CAPABILITY_MIGRATION_COMPLETE.md  CAPABILITY_MIGRATION_SUMMARY.md  CLAUDE.md  CODE_CONSISTENCY_IMPLEMENTATION.md  CODE_CONSISTENCY_REPORT.md  CODE_CONSISTENCY_TODO.md  COMPILATION_STATUS.md  COMPONENT_LINKER_PLAN.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_ROADMAP.md  DOCUMENTATION.md  (+209 more)
cargo-wrt/: Cargo.toml  README.md  libmod.rlib  libtests.rlib  test_progress_syntax
cargo-wrt/src/: main.rs  test_config.rs  testing.rs
cargo-wrt/tests/: integration_tests.rs
cfi_tests/: Cargo.toml
cfi_tests/src/: cfi_core_tests.rs  lib.rs
example/: BUILD  Cargo.toml  README.md  build.rs  example.wit  simple_wit_ast_demo.rs  wit_ast_example.rs  wit_component_lowering_example.rs  wit_debug_integration_example.rs  wit_incremental_parser_example.rs  wit_lsp_example.rs  wit_runtime_debugger_example.rs
example/src/: lib.rs
example/wit/: example.wit
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_bounded_stack.rs  fuzz_bounded_vec.rs  fuzz_memory_adapter.rs  fuzz_safe_slice.rs
logging-adapter/: Cargo.toml  build.rs
logging-adapter/src/: lib.rs
logging-adapter/wit/: adapter.wit
test-control-instructions/: Cargo.toml
test-control-instructions/src/: main.rs  tests.rs
wrt-build-core/: Cargo.toml  README.md
wrt-build-core/src/: build.rs  cache.rs  ci.rs  config.rs  diagnostics.rs  error.rs  filtering.rs  formatters.rs  fuzz.rs  kani.rs  lib.rs  matrix.rs  memory.rs  parsers.rs  requirements.rs  test.rs  text_search.rs  tool_versions.rs  tools.rs  validation.rs  verification_tool.rs  verify.rs  wasm.rs  wast.rs  wast_execution.rs  wast_test_runner.rs  wast_validator.rs  wast_values.rs
wrt-common/: Cargo.toml
wrt-common/src/: component_type.rs  component_value.rs  lib.rs
wrt-component/: ASYNC_IMPLEMENTATION_SUMMARY.md  BUILD  COMPONENT_MODEL_GAP_ANALYSIS.md  COMPONENT_MODEL_STATUS.md  COMPONENT_STATUS.md  Cargo.toml  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_ROADMAP.md  MISSING_FEATURES.md  MVP_COMPLIANCE_SUMMARY.md  NO_STD_FIXES_REQUIRED.md  README.md  README_ASYNC_FEATURES.md  VERIFICATION.md  fuzz_all.sh  test.rs  test_syntax  verify_build.sh
wrt-component/benches/: execution_benchmarks.rs  wrt_allocator_benchmarks.rs  zero_cost_validation.rs
wrt-component/examples/: README.md  agent_performance_comparison.rs  async_features_demo.rs  canonical_realloc_example.rs  component_graph_view.rs  component_info_simple.rs  component_model_async_example.rs  interceptor_example.rs  real_world_integration.rs  unified_agent_demo.rs
wrt-component/fuzz/: Cargo.toml
wrt-component/src/: adapter.rs  advanced_threading_builtins.rs  agent_registry.rs  async_canonical.rs  async_context_builtins.rs  async_execution_engine.rs  async_runtime_bridge.rs  async_types.rs  blast_zone.rs  borrowed_handles.rs  bounded_component_infra.rs  bounded_resource_management.rs  call_context.rs  canonical.rs  canonical_abi_tests.rs  canonical_executor.rs  canonical_options.rs  canonical_realloc.rs  component.rs  component_communication.rs  component_instantiation.rs  component_instantiation_tests.rs  component_linker.rs  component_registry.rs  component_registry_no_std.rs  component_resolver.rs  component_value_no_std.rs  cross_component_calls.rs  cross_component_communication.rs  cross_component_resource_sharing.rs  error_context_builtins.rs  error_format.rs  execution.rs  execution_engine.rs  export.rs  export_map.rs  factory.rs  fixed_length_lists.rs  foundation_stubs.rs  generative_types.rs  (+51 more)
wrt-component/tests/: README_SAFETY_CRITICAL_TESTS.md  async_features_integration_test.rs  async_features_integration_tests.rs  canonical_abi_tests.rs  component_model_integration_tests.rs  extended_wasm_test_suite.rs  fuel_async_integration_test.rs  fuel_async_integration_tests.rs  integration_tests.rs  memory_optimization_tests.rs  memory_tests_moved.rs  no_alloc_test.rs  no_alloc_tests.rs  parser_test.rs  (+28 more)
wrt-dagger/: Cargo.toml  README.md
wrt-debug/: BUILD_STATUS.md  COMPLETE_DEBUG_ARCHITECTURE.md  COMPLETE_DEBUG_FEATURES.md  Cargo.toml  DEBUGGING_CAPABILITIES.md  DEBUG_ARCHITECTURE.md  DEBUG_CAPABILITIES_SUMMARY.md  DEBUG_FEATURES.md  FEATURES.md  FEATURE_BUILD_STATUS.md  README.md  RUNTIME_DEBUG_ARCHITECTURE.md  RUNTIME_DEBUG_GUIDE.md  test_features.sh  verify_compilation
wrt-decoder/: Cargo.toml  README.md
wrt-error/: ASIL_SAFETY.md  BUILD  Cargo.toml  README.md
wrt-format/: Cargo.toml  README.md  rustc-ice-2025-08-09T15_18_34-6936.txt  rustc-ice-2025-08-09T15_21_45-9256.txt  rustc-ice-2025-08-09T15_41_44-18721.txt
wrt-foundation/: Cargo.toml  README.md  verify_no_std.sh
wrt-helper/: Cargo.toml  README.md
wrt-host/: Cargo.toml  README.md
wrt-instructions/: CONSTANT_EXPRESSIONS_SUMMARY.md  Cargo.toml  MATH_INTEGRATION_SUMMARY.md  README.md
wrt-intercept/: Cargo.toml  README.md
wrt-logging/: Cargo.toml  README.md
wrt-math/: CPU_ACCELERATION_ANALYSIS.md  Cargo.toml  LICENSE-MIT  README.md  WASM_MATH_OPS_TODO.md
wrt-panic/: Cargo.toml
wrt-parser/: Cargo.toml  README.md
wrt-platform/: Cargo.toml  README-SAFETY.md  README.md
wrt-platform-vxworks/: Cargo.toml
wrt-runtime/: BUILD  Cargo.toml  README.md
wrt-sync/: BUILD  Cargo.toml  README.md
wrt-test-registry/: Cargo.toml  README.md
(+1903 files in other folders)
