[workspace]
members = [
    "wrtd",
    "wrt-sync",
    "wrt-error",
    "wrt-format",
    "wrt-foundation",
    "wrt-decoder",
    "wrt-debug",
    "wrt-component",
    "wrt-math",
    "wrt-host",
    "wrt-logging",
    "wrt-runtime",
    "wrt-instructions",
    "wrt-intercept",
    "wrt-platform",
    "wrt-panic",
    "wrt-build-core",
    "cargo-wrt"]
exclude = ["examples/wasi-nn/inference_module"]
resolver = "2"  # Use edition 2021 resolver

[workspace.package]
authors = ["The WRT Project Developers"]
edition = "2024"
rust-version = "1.85.0"
license = "MIT"
repository = "https://github.com/pulseengine/wrt" # Updated repository URL
version = "0.2.0" # Updated to 0.2.0 for consistency


[workspace.dependencies]
anyhow = "1.0"
wit-bindgen = "0.41.0"

# Internal crate versions
wrt-error = { path = "wrt-error", version = "0.2.0", default-features = false }
wrt-error-ng = { path = "wrt-error-ng", version = "0.2.0", default-features = false }
wrt-sync = { path = "wrt-sync", version = "0.2.0", default-features = false }
wrt-format = { path = "wrt-format", version = "0.2.0", default-features = false }
wrt-foundation = { path = "wrt-foundation", version = "0.2.0", default-features = false }
wrt-decoder = { path = "wrt-decoder", version = "0.2.0", default-features = false, features = ["std"] }
wrt-parser = { path = "wrt-parser", version = "0.2.0", default-features = false }
wrt-debug = { path = "wrt-debug", version = "0.2.0", default-features = false }
wrt-runtime = { path = "wrt-runtime", version = "0.2.0", default-features = false }
wrt-logging = { path = "wrt-logging", version = "0.2.0", default-features = false }
wrt-instructions = { path = "wrt-instructions", version = "0.2.0", default-features = false }
wrt-component = { path = "wrt-component", version = "0.2.0", default-features = false }
wrt-host = { path = "wrt-host", version = "0.2.0", default-features = false }
wrt-intercept = { path = "wrt-intercept", version = "0.2.0", default-features = false }
wrt-math = { path = "wrt-math", version = "0.2.0", default-features = false }
wrt-platform = { path = "wrt-platform", version = "0.2.0", default-features = false }
wrt-panic = { path = "wrt-panic", version = "0.2.0", default-features = false }
wrt-wasi = { path = "wrt-wasi", version = "0.2.0", default-features = false }

# Note: Safety level presets should be defined in individual crate Cargo.toml files
# as workspace.features is not supported by Cargo

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(test)'] }
deprecated = "allow"
useless_ptr_null_checks = "allow"
unused_imports = "allow"
unused_variables = "allow"
unused_mut = "allow"
unused_macros = "allow"
unused_assignments = "allow"
missing_docs = "allow"
dead_code = "allow"
unreachable_patterns = "allow"

[workspace.lints.clippy]
# Static memory enforcement - relaxed for CI stability
# std_instead_of_core = "deny" - disabled for CI
# std_instead_of_alloc = "deny" - disabled for CI
std_instead_of_core = "allow"
std_instead_of_alloc = "allow"
# Allow warnings that would require substantial refactoring
needless_continue = "allow"
if_not_else = "allow"
needless_pass_by_value = "allow"
manual_let_else = "allow"
elidable_lifetime_names = "allow"
unused_self = "allow"
ptr_as_ptr = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
unreadable_literal = "allow"
too_many_lines = "allow"
similar_names = "allow"
module_name_repetitions = "allow"
inline_always = "allow"
multiple_crate_versions = "allow"
semicolon_if_nothing_returned = "allow"
comparison_chain = "allow"
ignored_unit_patterns = "allow"
single_match_else = "allow"
needless_range_loop = "allow"
explicit_iter_loop = "allow"
bool_to_int_with_if = "allow"
match_same_arms = "allow"
match_like_matches_macro = "allow"
result_unit_err = "allow"
uninlined_format_args = "allow"
large_enum_variant = "allow"
must_use_candidate = "allow"
new_without_default = "allow"
used_underscore_binding = "allow"
wildcard_in_or_patterns = "allow"
map_unwrap_or = "allow"
ref_option = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
return_self_not_must_use = "allow"
too_many_arguments = "allow"
struct_excessive_bools = "allow"
type_complexity = "allow"
needless_borrow = "allow"
default_trait_access = "allow"
init_numbered_fields = "allow"
field_reassign_with_default = "allow"
op_ref = "allow"
should_implement_trait = "allow"
match_wildcard_for_single_variants = "allow"
reserve_after_initialization = "allow"
needless_late_init = "allow"
empty_line_after_doc_comments = "allow"
int_plus_one = "allow"
extra_unused_lifetimes = "allow"
unnecessary_cast = "allow"
manual_range_contains = "allow"
single_match = "allow"
question_mark = "allow"
collapsible_if = "allow"
redundant_closure = "allow"
iter_nth = "allow"
clone_on_copy = "allow"
map_identity = "allow"
range_plus_one = "allow"
arc_with_non_send_sync = "allow"
collapsible_match = "allow"
explicit_auto_deref = "allow"
useless_conversion = "allow"
or_fun_call = "allow"
manual_ok_or = "allow"
explicit_counter_loop = "allow"
unwrap_or_default = "allow"
get_first = "allow"
range_minus_one = "allow"
# pedantic group removed to avoid priority conflicts with individual lints
# Warn about allocations that could be bounded
vec_init_then_push = "allow"
redundant_pattern_matching = "allow"
let_unit_value = "allow"
derivable_impls = "allow"
only_used_in_recursion = "allow"
borrowed_box = "allow"
needless_return = "allow"
ptr_arg = "allow"
manual_div_ceil = "allow"
filter_map_identity = "allow"
map_clone = "allow"
option_if_let_else = "allow"
never_loop = "allow"
trivially_copy_pass_by_ref = "allow"
overly_complex_bool_expr = "allow"
nonminimal_bool = "allow"
unnested_or_patterns = "allow"
inefficient_to_string = "allow"
manual_filter_map = "allow"
module_inception = "allow"
missing_const_for_thread_local = "allow"
eq_op = "allow"
doc_markdown = "allow"
unwrap_used = "allow"
option_as_ref_deref = "allow"
slow_vector_initialization = "allow"
non_minimal_cfg = "allow"
manual_contains = "allow"
unnecessary_lazy_evaluations = "allow"
unnecessary_filter_map = "allow"
doc_lazy_continuation = "allow"
cloned_ref_to_slice_refs = "allow"
unnecessary_unwrap = "allow"
non_canonical_clone_impl = "allow"
if_same_then_else = "allow"
manual_strip = "allow"
collapsible_else_if = "allow"
let_and_return = "allow"
unnecessary_to_owned = "allow"
useless_format = "allow"
manual_range_patterns = "allow"
unnecessary_map_or = "allow"
assigning_clones = "allow"
manual_inspect = "allow"
items_after_statements = "allow"
expect_used = "allow"
to_string_in_format_args = "allow"
crate_in_macro_def = "allow"
disallowed_names = "allow"
needless_borrows_for_generic_args = "allow"
single_char_add_str = "allow"
double_must_use = "allow"
single_component_path_imports = "allow"
float_cmp = "allow"
panic = "allow"
let_underscore_drop = "allow"
useless_vec = "allow"
items_after_test_module = "allow"
unnecessary_literal_unwrap = "allow"
iter_cloned_collect = "allow"
double_comparisons = "allow"
redundant_guards = "allow"
empty_line_after_outer_attr = "allow"
missing_fields_in_debug = "allow"
approx_constant = "allow"
bool_assert_comparison = "allow"
ptr_eq = "allow"
missing_safety_doc = "allow"
extra_unused_type_parameters = "allow"
# Performance and safety
unnecessary_box_returns = "warn"

# Workspace-level profiles inherit by members unless overridden.
# Setting panic=abort for production profiles (dev/release) for safety and deterministic behavior.
# Test and bench profiles intentionally use default panic handling for proper test framework operation.
[profile.dev]
panic = "abort"
# Inherits other settings from Cargo's defaults

[profile.release]
panic = "abort"
strip = true  # Reduce binary size
lto = true    # Link-Time Optimization
codegen-units = 1 # Maximize optimization opportunities

# Note: panic setting is intentionally omitted for test and bench profiles
# Tests and benchmarks need panic handling for proper error reporting and measurement
[profile.test]
# Inherits other settings from Cargo's defaults (e.g., debug assertions enabled)
# panic setting is not specified - let Rust handle this appropriately for tests

[profile.bench]
# Inherits from release profile by default
# panic setting is not specified - let Rust handle this appropriately for benchmarks

# Workspace-level Kani verification configuration
[workspace.metadata.kani]
# Global Kani settings for safety-critical verification
default-unwind = 5
stubbing-enabled = true
concrete-playbook = "off"
output-format = "terse"
# Enhanced settings for ASIL-C/D compliance
solver = "cadical"
enable-unstable = true
parallel = 4

# Memory safety verification suite
[[workspace.metadata.kani.package]]
name = "wrt-foundation"
verification-enabled = true
harnesses = [
    "verify_bounded_collections_memory_safety",
    "verify_safe_memory_bounds", 
    "verify_atomic_memory_operations",
    "verify_memory_budget_never_exceeded",
    "verify_hierarchical_budget_consistency",
    "verify_cross_crate_memory_isolation"
]

# Concurrency safety verification suite  
[[workspace.metadata.kani.package]]
name = "wrt-sync"
verification-enabled = true
harnesses = [
    "verify_mutex_no_data_races",
    "verify_rwlock_concurrent_access",
    "verify_atomic_operations_safety"
]

# Type safety verification suite
[[workspace.metadata.kani.package]]
name = "wrt-component"
verification-enabled = true
harnesses = [
    "verify_component_type_safety",
    "verify_namespace_operations",
    "verify_import_export_consistency"
]

# Error handling verification
[[workspace.metadata.kani.package]]
name = "wrt-error"
verification-enabled = true
harnesses = [
    "verify_error_creation_safety",
    "verify_error_propagation"
]

# Runtime verification suite
[[workspace.metadata.kani.package]]
name = "wrt-runtime"
verification-enabled = true
harnesses = [
    "verify_execution_stack_bounds",
    "verify_function_call_depth",
    "verify_memory_access_bounds"
]

# Platform abstraction verification
[[workspace.metadata.kani.package]]
name = "wrt-platform"
verification-enabled = true
harnesses = [
    "verify_platform_memory_operations",
    "verify_synchronization_primitives",
    "verify_thread_safety"
]
