###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "wrt",
    version = "0.2.0",
)

bazel_dep(name = "rules_rust", version = "0.60.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")

# Use rust extension instead of rust_toolchain_repository
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.75.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

wasm_bindgen = use_extension("@rules_rust//wasm_bindgen:extensions.bzl", "wasm_bindgen_register_toolchains")
wasm_bindgen.wasm_bindgen_register_toolchains()
use_repo(wasm_bindgen, "wasm_bindgen_toolchains")

# crate_universe extension for Rust crates
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")

# Use an older version of wit-bindgen-rt that doesn't have the issues
crate.spec(
    package = "wit-bindgen-rt",
    version = "=0.39.0",
)

# From cargo configuration
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//example:Cargo.toml",
        "//wrt:Cargo.toml",
        "//:wrt-common/Cargo.toml",
        "//:wrt-component/Cargo.toml",
        "//:wrt-decoder/Cargo.toml",
        "//:wrt-error/Cargo.toml",
        "//:wrt-format/Cargo.toml",
        "//:wrt-host/Cargo.toml",
        "//:wrt-instructions/Cargo.toml",
        "//:wrt-intercept/Cargo.toml",
        "//:wrt-logging/Cargo.toml",
        "//:wrt-runtime/Cargo.toml",
        "//:wrt-sync/Cargo.toml",
        "//:wrt-types/Cargo.toml",
        "//wrtd:Cargo.toml",
        "//xtask:Cargo.toml",
    ],
)
use_repo(crate, "crates")
