[package]
name = "cargo-wrt"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
description = "WRT build system CLI - the new unified build tool for WebAssembly Runtime"
documentation = "https://docs.rs/cargo-wrt"
readme = "README.md"
homepage = "https://github.com/pulseengine/wrt"
categories = ["development-tools", "embedded", "wasm"]
keywords = ["webassembly", "wasm", "runtime", "build-tool", "safety-critical"]

[[bin]]
name = "cargo-wrt"
path = "src/main.rs"

[features]
default = ["std"]
std = ["wrt-build-core/std"]

[dependencies]
# Core build system
wrt-build-core = { path = "../wrt-build-core" }

# CLI framework
clap = { version = "4.5.4", features = ["derive", "env"] }
anyhow = { workspace = true }

# Output formatting
colored = "3.0.0"
serde_json = "1.0"

# Environment detection
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["serde"] }

[lints]
workspace = true