[package]
name = "cfi-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Control Flow Integrity (CFI) tests for WRT"

[dependencies]
# Minimal dependencies for isolated testing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[dev-dependencies]
quickcheck = "1.0"
proptest = "1.2"
mockall = "0.11"

[[bench]]
name = "cfi_benchmarks"
harness = false

[lib]
name = "cfi_tests"
path = "src/lib.rs"