[package]
name = "example"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Example WebAssembly Module using WASI logging"
repository = "https://github.com/avrabe/wrt"
readme = "README.md"
keywords = ["wasm", "webassembly", "example", "wasi"]
categories = ["wasm", "development-tools::testing"]

[lib]
crate-type = ["cdylib"]

# Set default target to wasm32-wasip2
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
# Use wit-bindgen from workspace with realloc feature
wit-bindgen = { workspace = true, features = ["realloc"] }

# Add build-dependencies for the build script
[build-dependencies]
anyhow = { workspace = true }

