[package]
name = "example"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Example WebAssembly Module using WASI logging"
repository = "https://github.com/pulseengine/wrt"
readme = "README.md"
keywords = ["wasm", "webassembly", "example", "wasi"]
categories = ["wasm", "development-tools::testing"]

[lib]
crate-type = ["cdylib"]

# Set default target to wasm32-wasip2

[dependencies]
# Use wit-bindgen from workspace with realloc feature
wit-bindgen = { workspace = true, features = ["realloc"] }
# Add wrt-format for AST example
wrt-format = { path = "../wrt-format", features = ["alloc"] }
wrt-foundation = { path = "../wrt-foundation" }
# Add wrt-debug for debugging integration example
wrt-debug = { path = "../wrt-debug", features = ["wit-integration"], optional = true }
# Add wrt-runtime for runtime debugger integration
wrt-runtime = { path = "../wrt-runtime", features = ["wit-debug-integration"], optional = true }

[features]
default = ["std"]
std = ["wrt-format/std", "wrt-foundation/std"]
alloc = ["wrt-format/alloc", "wrt-foundation/alloc"]
wrt-debug = ["dep:wrt-debug"]
wit-debug-integration = ["dep:wrt-runtime", "dep:wrt-debug", "std"]
lsp = ["wrt-format/lsp", "std"]

[[example]]
name = "wit_ast_example"
path = "wit_ast_example.rs"

[[example]]
name = "wit_debug_integration_example"
path = "wit_debug_integration_example.rs"

[[example]]
name = "wit_incremental_parser_example"
path = "wit_incremental_parser_example.rs"

[[example]]
name = "wit_lsp_example"
path = "wit_lsp_example.rs"

[[example]]
name = "wit_component_lowering_example"
path = "wit_component_lowering_example.rs"

[[example]]
name = "wit_runtime_debugger_example"
path = "wit_runtime_debugger_example.rs"
required-features = ["wit-debug-integration"]

[[example]]
name = "simple_wit_ast_demo"
path = "simple_wit_ast_demo.rs"

# Add build-dependencies for the build script
[build-dependencies]
anyhow = { workspace = true }

