[package]
name = "wrt-foundation-fuzz"
version = "0.2.0"
publish = false
edition = "2021"
authors = ["The WRT Project Developers"]
license = "MIT"

[package.metadata]
cargo-fuzz = true

[workspace]
members = ["."]

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
wrt-foundation = { path = ".." }

# For memory testing
wrt-runtime = { path = "../../wrt-runtime" }
wrt = { path = "../../wrt" }

[[bin]]
name = "fuzz_safe_slice"
path = "fuzz_targets/fuzz_safe_slice.rs"
test = false
doc = false

[[bin]]
name = "fuzz_bounded_vec"
path = "fuzz_targets/fuzz_bounded_vec.rs"
test = false
doc = false

[[bin]]
name = "fuzz_bounded_stack"
path = "fuzz_targets/fuzz_bounded_stack.rs"
test = false
doc = false

[[bin]]
name = "fuzz_memory_adapter"
path = "fuzz_targets/fuzz_memory_adapter.rs"
test = false
doc = false 