[package]
name = "test-control-instructions"
version = "0.1.0"
edition = "2021"
description = "Test utilities for WebAssembly control instructions"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wrt-decoder = { path = "../wrt-decoder", version = "0.2.0" }
wrt-format = { path = "../wrt-format", version = "0.2.0" }
wrt-types = { path = "../wrt-types", version = "0.2.0" }
wrt-error = { path = "../wrt-error", version = "0.2.0" }
# For alloc support in no_std
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }

[features]
default = ["std"]
std = [
    "wrt-decoder/std", 
    "wrt-format/std", 
    "wrt-types/std", 
    "wrt-error/std"
]
no_std = [
    "alloc",
    "wrt-decoder/no_std", 
    "wrt-format/no_std", 
    "wrt-types/no_std", 
    "wrt-error/no_std"
]
alloc = [
    "dep:alloc",
    "wrt-decoder/alloc", 
    "wrt-format/alloc", 
    "wrt-types/alloc", 
    "wrt-error/alloc"
]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(test)'] }
