[package]
name = "wrt-build-core"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["std"]
std = ["anyhow/std", "clap/std", "wrt-runtime/std", "wrt-decoder/std"]
no_std = []

[dependencies]
# Core dependencies
anyhow = { workspace = true }
clap = { version = "4.5.39", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5.0"
tempfile = "3.8"
fs_extra = "1.3.0"
chrono = { version = "0.4", features = ["serde"] }

# Path dependencies for cross-platform operations
pathdiff = "0.2"
colored = "3.0.0"
regex = "1.10"

# Configuration parsing
toml = "0.8"
md5 = "0.7"

# WAST test suite support
wast = "235.0"
wat = "1.232.0"

# Internal WRT crates
wrt-error = { workspace = true }
wrt-foundation = { workspace = true }
wrt-format = { workspace = true }
wrt-decoder = { workspace = true }
wrt-runtime = { workspace = true }

# Optional testing framework integration
[dev-dependencies]
tempfile = "3.8"

[lints]
workspace = true
