[package]
name = "wrt-common"
version = "0.1.0"
edition = "2021"
description = "Common type definitions for WebAssembly Runtime (WRT)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/avrabe/wrt"

[features]
default = ["std"]
std = ["wrt-error/std", "log"]
no_std = ["wrt-error/no_std"]
kani = ["dep:kani-verifier"]  # Feature for formal verification

[dependencies]
wrt-error = { path = "../wrt-error", version = "0.1.0" }

# For formal verification
kani-verifier = { version = "0.61.0", optional = true }

# No-std support
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }

log = { version = "0.4", optional = true }

[lints.rust]
unsafe_code = "warn"
missing_docs = "warn" 